# diffing-prompts

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  extracted_prompts.txt  intro_logprobs.ipynb  kl_demo.py  playground.py  pyproject.toml
.claude/: COMMAND_CONTEXT.md  settings.json
.claude/commands/: commit.md
.claude/scripts/: ruff-check.py  validate-file-organization.py
docs/: kl_demo_usage.md  quick-start-guide.md
docs/guides/: inspect_pickle.md  (+4 more)
examples/: README.md  kl_divergence_example.py
notebooks/: README.md  cot_following.py  embeddings_similarity_notebook.py  gemini_logprobs_demo.py  kl_demo_notebook.py  kl_demo_reasoning_notebook.py  kl_divergence_minimal_example.py  openrouter_demo.py  perplexity_demo.py  prompt_optimization_kl_notebook.py  simple_openrouter_sample.py  tokenizer_demo.py  toy_example_kl.py
scripts/: inspect_pickle.sh
specs/: different_responses_api.md  experiment_template.md  kl_demo.md
src/: __init__.py  analyze_test_logprobs.py  calculate_kl.py  calculate_kl_divergence.py  calculate_kl_divergence_batch.py  calculate_kl_divergence_openrouter.py  calculate_kl_divergence_vllm.py  calculate_kl_from_logprobs.py  calculate_loss.py  calculate_perplexity.py  extract_high_kl_tokens.py  extract_prompts.py  google_client.py  inspect_pickle.py  kl_divergence.py  kl_divergence_metric.py  kl_metric.py  kl_viewer_app.py  llm_judge.py  openrouter_client.py  plot_score_distribution.py  prompts_loader.py  sample_high_kl_responses.py  sample_high_kl_responses_vllm.py  sample_responses.py  sample_responses_from_json.py  sample_responses_google.py  sample_single_prompt.py
tests/: test_kl_demo.py  test_openrouter_connection.py
(+31 files in other folders)
