[project]
name = "diffing-prompts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "fire>=0.5.0",
    "vllm==0.9.2",
    "hf-transfer>=0.1.9",
    "transformers<4.54.0",
]
