[project]
name = "diffing-prompts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "fire>=0.5.0",
    "hf-transfer>=0.1.9",
    "jupyter>=1.1.1",
    "datasets>=4.2.0",
    "accelerate>=1.10.1",
    "peft==0.15.2",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "google-genai>=1.46.0",
    "google-cloud-storage>=2.10.0",
    "ipykernel==6.30.1",
    "ruff>=0.14.2",
    "numpy>=1.24.0",
    "flask>=3.1.2",
    "vllm==0.9.2",
    "transformers<4.54.0",
    "bitsandbytes>=0.49.0",
]
